fix: missable tag in index.html not showing on hover

--- a/css/critical-css/index.css
+++ b/css/critical-css/index.css
@@ -100,6 +100,7 @@ h4 {
 }
 
 p {
+  position: relative;
   margin-bottom: 1rem;
 }
 
